# RATS

./: .codecov.yml  .coveragerc  .gitignore  .gitlab-ci.yml  README.md  example_notebook.ipynb
.github/workflows/: CI.yml  coverage.yml
InterimPresentation/: bib.bib  interimpresentation.tex
Report/: bib.bib  main.tex
cluster_tests/: .gitignore  aggregate_data.py  array_script.sh  augmenter_configs.yaml  dataLoader.py  make_table.py  memory_benchmarking.py  test_script.sh  time_benchmarking.py  time_memory_plots.py  utils.py
coverage/: generate_coverage.py
data/Car/: Car_augmented.csv  Car_meta.json
data/Plane/: Plane_meta.json
examples/: demo.ipynb
examples/Car/: Car.csv
examples/ECG200/: ECG200.csv  ECG200_augmented.csv  ECG200_meta.json
examples/Plane/: Plane.csv  Plane_augmented.csv
fraug/: Cargo.toml  README.md  visualize_ts_data.py
fraug/preProcessing/: arff_to_csv.py  dataLoader.py
fraug/src/: lib.rs  main.rs  readcsv.rs
fraug/tests/: augmenters.rs  pipeline.rs
fraug/utils/: dataLoader.py
public/: _redirects  all.html  crates.js  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js  struct.Dataset.html
public/augmenters/: enum.ConvolveWindow.html  enum.NoiseType.html  enum.PoolingMethod.html  index.html  sidebar-items.js  struct.AddNoise.html  struct.AmplitudePhasePerturbation.html  struct.AugmentationPipeline.html  struct.Convolve.html  (+16 more)
pyfraug/: Cargo.toml  README.md  pyproject.toml  requirements.txt
pyfraug/benchmarking/: augmenter_configs.yaml  augmenters.yaml  memory_benchmarking.py  notebook.ipynb  pipeline_test.py  time_benchmarking.py  time_memory_plots.py  utils.py
pyfraug/benchmarking/qualitative/: dtw_analysis.py  qualitative_analysis.py
pyfraug/benchmarking/quantitative/: memory_benchmarking.py  time_benchmarking.py  time_memory_plots.py
pyfraug/docs/: augmenters.rst  conf.py  index.md  quality_benchmarking.rst  requirements.txt  transforms.rst
pyfraug/pyfraug/: __init__.py  pyfraug.pyi
pyfraug/src/: augmenters.rs  lib.rs  quality_benchmarking.rs  transforms.rs
pyfraug/tests/: notebook.ipynb  test.py  test_pyfraug.py
rats/: Cargo.toml  README.md
rats/src/: lib.rs  main.rs
rats/src/augmenters/: addnoise.rs  amplitude_phase_perturbation.rs  base.rs  convolve.rs  drop.rs  frequency_mask.rs  mod.rs  pool.rs  repeat.rs  reverse.rs  rotation.rs
rats/src/quality_benchmarking/: dtw.rs  mod.rs
rats/src/transforms/: dct.rs  mod.rs
rats/tests/: augmenters.rs  pipeline.rs
ratspy/: .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml  requirements.txt
ratspy/benchmarking/qualitative/: dtw_analysis.py  qualitative_analysis.py
ratspy/benchmarking/quantitative/: memory_benchmarking.py  plot_vs_size_from_csv.py  time_benchmarking.py  time_memory_plots.py
ratspy/docs/: augmenters.rst  conf.py  quality_benchmarking.rst  requirements.txt  transforms.rst
ratspy/ratspy/: __init__.py  ratspy.pyi
ratspy/src/: augmenters.rs  lib.rs  quality_benchmarking.rs  transforms.rs
ratspy/tests/: test_RATSpy.py
(+105 files in other folders)
