[package]
name = "pyfraug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyfraug"
crate-type = ["cdylib"]

[dependencies]
fraug = { path = "../fraug" }
ndarray = "0.16.1"
numpy = "0.25.0"
bytemuck = "1.23.1"
rand = "0.9.1"
tracing = "0.1"

[dependencies.pyo3]
version = "0.25.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "multiple-pymethods"]
