[package]
name = "rats-rs"
version = "0.1.0-alpha"
edition = "2024"
license = "Apache-2.0"
description = "Rapid Augmentations for Time Series"
repository = "https://github.com/HyperVectors/RATS"
readme = "README.md"
exclude = ["/src/main.rs", "/src/readcsv.rs", "/utils/*"]

[dependencies]
csv = "1.3"
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
rustfft = "6"
rustdct = "0.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
